# peregrine-py

./: .gitignore  .gitmodules  Peregrine.py  README.md  controller.py  eval_metrics.py  fc_enidrift.py  fc_kitnet.py  peregrine_header.py  pipeline.py  pipeline_enidrift.py  pipeline_kitnet.py  pipeline_whisper.py  test.sh
build_tools/: cloc.sh
config/: enidrift.yml  kitnet.yml  whisper.yml
confs/: ports.json
controller/: Makefile  README.md  run-with-hw.sh  run-with-model.sh  topology-model.json  topology.json
controller/src/: main.cpp  packet.h  peregrine.cpp  peregrine.h  ports.h  setup.cpp  table.cpp  table.h  topology.cpp  topology.h
controller/src/tables/: five_t_cov.h  five_t_decay_check.h  five_t_mean_1_access.h  five_t_mean_ss_1.h  five_t_pcc.h  five_t_pkt_cnt_1_access.h  five_t_res_prod.h  five_t_ss_1_access.h  five_t_std_dev_prod.h  five_t_sum_res_prod_get_carry.h  five_t_variance_1_abs.h  fwd_recirculation_a.h  fwd_recirculation_b.h  ip_cov.h  ip_decay_check.h  ip_mean_1_access.h  ip_mean_ss_0.h  ip_mean_ss_1.h  ip_pkt_cnt_1_access.h  ip_res_prod.h  ip_res_struct_update.h  ip_src_decay_check.h  ip_ss_1_access.h  ip_sum_res_prod_get_carry.h  ip_variance_0_abs.h  ip_variance_1_abs.h  mac_ip_src_decay_check.h  mac_ip_src_mean.h  out_counter.h  sampling_rate.h
cpp/: .clang-format  Makefile  run-with-hw.sh  run-with-model.sh  topology-model.json  topology.json
cpp/src/: five_t_decay_check.h  ip_decay_check.h  ip_mean.h  ip_mean_1_access.h  ip_mean_ss_0.h  ip_mean_ss_1.h  ip_pkt_cnt_1_access.h  ip_res_prod.h  ip_res_struct_update.h  ip_src_decay_check.h  ip_src_mean.h  ip_ss_1_access.h  ip_sum_res_prod_get_carry.h  mac_ip_src_decay_check.h  mac_ip_src_mean.h  main.cpp  packet.h  peregrine.cpp  peregrine.h  ports.h  setup.cpp  table.cpp  table.h  topology.cpp  topology.h
cpp/src/tables/: five_t_mean_0.h  five_t_mean_ss_0.h  five_t_pkt_cnt_1_access.h  five_t_res_struct_update.h  five_t_variance_0_abs.h  fwd_a.h  fwd_b.h  fwd_recirculation_a.h  ip_decay_check.h  ip_mean.h  ip_mean_0.h  ip_mean_1_access.h  ip_mean_ss_0.h  ip_mean_ss_1.h  ip_pcc.h  ip_pkt_cnt_1_access.h  ip_res_prod.h  ip_res_struct_update.h  ip_src_decay_check.h  ip_src_mean.h  ip_ss_1_access.h  ip_std_dev_prod.h  ip_sum_res_prod_get_carry.h  mac_ip_src_decay_check.h  mac_ip_src_mean.h
dev/: Dockerfile  docker-compose.yml  run.sh
dev/resources/: .tmux.conf
dev/scripts/: build-barefoot-sde.sh  build-p4.sh  share-sde.sh
dispatcher/: CMakeLists.txt
dispatcher/models/kitnet/: kitnet.py
dispatcher/protos/: kitnet.proto
dispatcher/src/: dispatcher.cpp  kitnet_client.cpp  listener.cpp  report.h  sample.h
dispatcher/src/plugins/: constants.h  kitnet_client.cpp  kitnet_client.h  plugins.h
docker/: .gitignore  Dockerfile  run.sh
docker/resources/: .bashrc  .inputrc  .tmux.conf  .vimrc
engine/: CMakeLists.txt  Makefile  build.sh
engine/models/kitnet/: kitnet.py  kitnet_pb2.py  kitnet_pb2_grpc.py  requirements.txt
engine/protos/: kitnet.proto
engine/src/: engine.cpp  kitnet_client.h  listener.cpp  packet.cpp  packet.h  report.h  sample.h
engine/src/engine/: engine.cpp  kitnet_client.cpp  kitnet_client.h  listener.h  packet.h  sample.h
engine/src/models/kitnet/: kitnet.cpp  kitnet.py
p4/: Makefile  kitsune.p4  multipipe_custom_bfrt.conf  pipeline_profile_a.p4  pipeline_profile_b.p4  run.sh  sniff.py
p4/includes/: constants.p4  deparser_a.p4  deparser_b.p4  headers.p4  parser_a.p4  parser_b.p4
p4/includes/stats/: stats_five_t.p4  stats_five_t_2d.p4  stats_five_t_a.p4  stats_ip.p4  stats_ip_2d.p4  stats_ip_a.p4  stats_ip_src.p4  stats_ip_src_a.p4  stats_mac_src_ip_src.p4
plugins/kitnet/: kitnet.py  run.sh
plugins/kitnet/KitNET/: KitNET.py
ptf/: test.py
py/: .gitignore  .gitmodules  Peregrine.py  controller.py  eval_metrics.py  fc_whisper.py  kitsune_tables.py  peregrine_header.py  peregrine_tables.py  pipeline.py  pipeline_kitnet.py  stats_calc.py  stats_calc_exact.py  training.py
py/KitNET/: KitNET.py  dA.py
py/config/: enidrift.yml
py/docker/: Dockerfile  docker-compose.yml
testbed/: bench-kitsune.py  bench.py  find-stable-throughput.py  hosts.py  plot-component-bench.py  plot-kitsune-fc-vs-ad.py  plot-kitsune-fe-vs-ad.py  plot-sampling-rate.py  plots.py  sampling-rate-plot.py  sampling-rate.py  sampling_rate.py  test-connection.py  test-original-detection.py  test_original_detection.py  testbed.json  tests.json  util.py
testbed/hosts/: Dispatcher.py  Engine.py  Host.py  KitNet.py  TG_DPDK.py  TG_kernel.py  Tofino.py
testbed/results/kitsune/: results.csv  stats.csv
testbed/results/sampling-rate/: active-wiretap.csv  arp-mitm.csv  botnet.csv  ddos-hoic.csv  ddos-loic.csv  dos-goldeneye.csv  dos-hulk.csv  dos-slowhttptest.csv  dos-slowloris.csv  dos-syn.csv  fuzzing.csv  os-scan.csv  port-scan.csv  ssdp-flood.csv  ssh-bruteforce.csv  ssl-renegotiation.csv  video-injection.csv
testbed/scripts/: curate-all-pcaps.sh  curate-pcap.py  trim-pcap.py
utils/: peregrine_hdr.py
